# recall-poc

./: .gitignore  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.test.config.ts
docs/: visual-search-recovery.md
sample-data/: expected-queries.json  hackathon-evaluation.json  project-memory.md  travel-notes.txt
sample-data/recipes/: dinner-plan.md
scripts/: generate_fixtures.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  db.rs  document_intent.rs  error.rs  extract.rs  fusion.rs  indexer.rs  lib.rs  main.rs  metadata.rs  query_intent.rs  search.rs  types.rs
src-tauri/src/visual/: category_expansion.rs  category_prompts.rs  classify.rs  encoder.rs  mod.rs  preprocess.rs  tagger.rs
src/app/: globals.css  layout.tsx
src/components/: app-shell.tsx  library-view.tsx  model-setup.tsx  privacy-view.tsx  search-view.tsx
src/components/ui/: badge.tsx  button.test.tsx  button.tsx  progress.tsx
src/lib/: tauri.ts  types.ts
src/store/: recall-store.ts
src/test/: react-global.ts
