[package]
name = "recall"
version = "0.1.0"
description = "Private local file search"
authors = ["Recall contributors"]
edition = "2021"

[lib]
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
mime_guess = "2"
ocrs = "0.12"
pdf-extract = "0.12"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
rten = "0.24"
rusqlite = { version = "0.37", features = ["bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
open = "5"
fastembed = "5.17"

[profile.dev.package.ocrs]
opt-level = 2

[profile.dev.package.rten]
opt-level = 2

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
